# advent-of-code-2025

./: .gitignore  LICENSE  aoc25.cabal
app/: Main.hs
src/Days/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs
